# stack-allow-newer

./: LICENSE  stack.yaml  test.cabal
